@@ -564,7 +564,7 @@ bool CD3D8Driver::reset()
 	setVertexShader(EVT_STANDARD);
 	setRenderStates3DMode();
 	setFog(FogColor, FogType, FogStart, FogEnd, FogDensity, PixelFog, RangeFog);
-	setAmbientLight(AmbientLight);
+	setAmbientLight(getAmbientLight());
 
 	return true;
 }
@@ -2019,10 +2019,11 @@ u32 CD3D8Driver::getMaximalDynamicLightAmount() const
 //! \param color: New color of the ambient light.
 void CD3D8Driver::setAmbientLight(const SColorf& color)
 {
+	CNullDriver::setAmbientLight(color);
+
 	if (!pID3DDevice)
 		return;
 
-	AmbientLight = color;
 	D3DCOLOR col = color.toSColor().color;
 	pID3DDevice->SetRenderState(D3DRS_AMBIENT, col);
 }
